--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </p>
 
         <!--ここにGoogleフォームのレスポンスURLを入力する（実際のGoogleフォーム回答画面から開発者ツールでformタグのactioin属性を探す）-->
-        <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSc2kTAzHbwnFxHgytbJ7x4ZjlhK5KRpvoStBH44K7zGgxQwnw/formResponse" method="POST" class="space-y-6">
+        <form action="[https://docs.google.com/forms/u/0/d/e/1FAIpQLSc2kTAzHbwnFxHgytbJ7x4ZjlhK5KRpvoStBH44K7zGgxQwnw/formResponse?usp=pp_url&continue=](https://docs.google.com/forms/u/0/d/e/1FAIpQLSc2kTAzHbwnFxHgytbJ7x4ZjlhK5KRpvoStBH44K7zGgxQwnw/formResponse?usp=pp_url&continue=)https://bftomiyasu-spec.github.io/battle_market_2025_form//thanks.html" method="POST" class="space-y-6">
 
             <!--
                 新しいGoogleフォームの「一般チケットの枚数を選択してください」の
