--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BATTLE MARKET 2025 チケット予約フォーム</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="[https://cdn.tailwindcss.com](https://cdn.tailwindcss.com)"></script>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap');
+        @import url('[https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap](https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap)');
         body {
             font-family: 'Noto Sans JP', sans-serif;
             width: 100%;
@@ -27,17 +27,10 @@
             予約&nbsp;¥3,500（U-22&nbsp;¥3,000）&nbsp;/&nbsp;当日&nbsp;¥4,000&nbsp;<br class="sm:hidden">すべて飲み放題＋フード付き
         </p>
 
-        <!--
-            フォーム送信はJavaScriptで処理されます。
-            action属性は、GoogleフォームのURLを参考に残しておきます。
-        -->
-        <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSc2kTAzHbwnFxHgytbJ7x4ZjlhK5KRpvoStBH44K7zGgxQwnw/formResponse" method="POST" class="space-y-6">
+        <!-- エラーメッセージ表示用の領域 -->
+        <div id="message-box" class="hidden text-center text-sm p-3 my-4 rounded-lg border border-red-400 bg-red-100 text-red-700 transition-all duration-300"></div>
 
-            <!--
-                新しいGoogleフォームの「一般チケットの枚数を選択してください」の
-                項目に対応するname属性（例: entry.1234567890）を
-                name="entry.1234567890" の部分に貼り付けてください。
-            -->
+        <form action="[https://docs.google.com/forms/u/0/d/e/1FAIpQLSc2kTAzHbwnFxHgytbJ7x4ZjlhK5KRpvoStBH44K7zGgxQwnw/formResponse](https://docs.google.com/forms/u/0/d/e/1FAIpQLSc2kTAzHbwnFxHgytbJ7x4ZjlhK5KRpvoStBH44K7zGgxQwnw/formResponse)" method="POST" class="space-y-6">
             <div>
                 <label for="general-ticket" class="block text-sm font-medium text-gray-700 mb-2">一般チケットの枚数を選択してください</label>
                 <select id="general-ticket" name="entry.927962343" class="mt-1 block w-full px-4 py-3 bg-white border border-gray-300 rounded-lg text-gray-900 focus:outline-none focus:ring-2 focus:ring-red-600 focus:border-red-600 transition-colors">
@@ -49,12 +42,6 @@
                     <option value="5">5</option>
                 </select>
             </div>
-
-            <!--
-                新しいGoogleフォームの「U-22チケットの枚数を選択してください」の
-                項目に対応するname属性（例: entry.1234567890）を
-                name="entry.1234567890" の部分に貼り付けてください。
-            -->
             <div>
                 <label for="u22-ticket" class="block text-sm font-medium text-gray-700 mb-2">U-22チケットの枚数を選択してください</label>
                 <p class="text-xs text-gray-500 mb-2">※2025/11/16時点で22歳以下の方が対象です。</p>
@@ -67,63 +54,88 @@
                     <option value="5">5</option>
                 </select>
             </div>
-
-            <!--
-                新しいGoogleフォームの「代表者氏名（フルネーム）」の
-                項目に対応するname属性（例: entry.1234567890）を
-                name="entry.1402801926" の部分に貼り付けてください。
-            -->
             <div>
                 <label for="full-name" class="block text-sm font-medium text-gray-700 mb-2">代表者氏名（フルネーム）</label>
                 <input type="text" id="full-name" name="entry.1402801926" placeholder="デス・富安・フォー・キューティー" class="mt-1 block w-full px-4 py-3 bg-white border border-gray-300 rounded-lg text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-red-600 focus:border-red-600 transition-colors">
             </div>
-
-            <!--
-                新しいGoogleフォームの「メールアドレス」の
-                項目に対応するname属性（例: entry.1234567890）を
-                name="entry.476909455" の部分に貼り付けてください。
-            -->
             <div>
                 <label for="email" class="block text-sm font-medium text-gray-700 mb-2">メールアドレス</label>
                 <p class="text-xs text-gray-500 mb-2">ご入力いただいたメールアドレスは、本企画に関するご連絡以外には一切使用しません。</p>
                 <input type="email" id="email" name="entry.476909455" placeholder="example@example.com" class="mt-1 block w-full px-4 py-3 bg-white border border-gray-300 rounded-lg text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-red-600 focus:border-red-600 transition-colors">
             </div>
-
             <div class="pt-6">
-                <button type="submit" class="w-full flex justify-center py-3 px-4 rounded-lg shadow-lg text-lg font-bold text-white bg-red-600 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-600 transition-colors">
+                <button type="submit" id="submit-button" class="w-full flex justify-center py-3 px-4 rounded-lg shadow-lg text-lg font-bold text-white bg-red-600 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-600 transition-colors">
                     予約を確定する
                 </button>
             </div>
         </form>
-
     </div>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const form = document.querySelector('form');
+            const submitButton = document.getElementById('submit-button');
+            const messageBox = document.getElementById('message-box');
+
+            function showMessage(message, type = 'error') {
+                messageBox.textContent = message;
+                messageBox.classList.remove('hidden');
+                if (type === 'error') {
+                    messageBox.classList.add('bg-red-100', 'text-red-700', 'border-red-400');
+                    messageBox.classList.remove('bg-green-100', 'text-green-700', 'border-green-400');
+                } else {
+                    messageBox.classList.add('bg-green-100', 'text-green-700', 'border-green-400');
+                    messageBox.classList.remove('bg-red-100', 'text-red-700', 'border-red-400');
+                }
+            }
+
+            function hideMessage() {
+                messageBox.classList.add('hidden');
+            }
+
             form.addEventListener('submit', async (e) => {
-                // デフォルトのフォーム送信をキャンセル
                 e.preventDefault();
+                hideMessage();
 
-                // フォームのデータを取得
+                // フォームの入力内容をチェック
+                const generalTickets = document.getElementById('general-ticket').value;
+                const u22Tickets = document.getElementById('u22-ticket').value;
+                const fullName = document.getElementById('full-name').value.trim();
+                const email = document.getElementById('email').value.trim();
+
+                // バリデーションルール
+                if (generalTickets === '0' && u22Tickets === '0') {
+                    showMessage('一般チケットまたはU-22チケットの枚数を1枚以上選択してください。');
+                    return;
+                }
+
+                if (fullName === '') {
+                    showMessage('代表者氏名を入力してください。');
+                    return;
+                }
+
+                if (email === '') {
+                    showMessage('メールアドレスを入力してください。');
+                    return;
+                }
+
+                // ローディング表示を開始
+                submitButton.textContent = '送信中...';
+                submitButton.disabled = true;
+                submitButton.classList.add('opacity-50', 'cursor-not-allowed');
+
                 const formData = new FormData(form);
-
-                // GoogleフォームのURLを組み立て
-                // ここでは、Googleフォームの「送信」->「埋め込みHTML」からコピーしたURLを使用してください。
-                const googleFormsUrl = 'https://docs.google.com/forms/u/0/d/e/1FAIpQLSc2kTAzHbwnFxHgytbJ7x4ZjlhK5KRpvoStBH44K7zGgxQwnw/formResponse';
+                const googleFormsUrl = '[https://docs.google.com/forms/u/0/d/e/1FAIpQLSc2kTAzHbwnFxHgytbJ7x4ZjlhK5KRpvoStBH44K7zGgxQwnw/formResponse](https://docs.google.com/forms/u/0/d/e/1FAIpQLSc2kTAzHbwnFxHgytbJ7x4ZjlhK5KRpvoStBH44K7zGgxQwnw/formResponse)';
                 const params = new URLSearchParams();
 
-                // フォームデータからnameとvalueを取得し、URLSearchParamsに追加
                 for (const [name, value] of formData.entries()) {
                     params.append(name, value);
                 }
 
-                // GoogleフォームにGETリクエストを送信
-                // CORSエラーを避けるため、GETリクエストを使用します
                 try {
                     await fetch(`${googleFormsUrl}?${params.toString()}`, {
                         method: 'GET',
-                        mode: 'no-cors' // クロスオリジン問題を回避するため
+                        mode: 'no-cors'
                     });
 
                     // 成功したらサンクスページにリダイレクト
@@ -131,12 +143,15 @@
 
                 } catch (error) {
                     console.error('予約送信中にエラーが発生しました:', error);
-                    // エラー時もサンクスページにリダイレクト
-                    window.location.href = './thanks.html';
+                    showMessage('申し訳ありません、予約送信中にエラーが発生しました。再度お試しください。', 'error');
+                    
+                    // ローディング表示をリセット
+                    submitButton.textContent = '予約を確定する';
+                    submitButton.disabled = false;
+                    submitButton.classList.remove('opacity-50', 'cursor-not-allowed');
                 }
             });
         });
     </script>
-
 </body>
 </html>
