--- a/thanks.html
+++ b/thanks.html
@@ -3,27 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>予約完了</title>
+    <title>ご予約完了</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap');
         body {
             font-family: 'Noto Sans JP', sans-serif;
+            width: 100%;
+            height: 100%;
         }
     </style>
 </head>
 <body class="bg-gray-100 text-gray-900 flex items-center justify-center p-6 min-h-screen">
-    <div class="bg-white p-8 rounded-2xl shadow-xl w-full max-w-lg border border-gray-200 text-center">
-        <h1 class="text-4xl font-bold text-red-600 tracking-tight mb-4">予約が完了しました！</h1>
-        <p class="text-lg text-gray-700 mb-8">
-            チケット予約が正常に完了しました。<br>
-            ご来場お待ちしております。
-        </p>
 
-        <!-- 特設サイトへのリンクボタン -->
-        <a href="https://bftomiyasu.fanpla.jp/feature/BattleMarket_2025" target="_blank" rel="noopener noreferrer" class="inline-block w-full py-3 px-4 rounded-lg shadow-lg text-lg font-bold text-white bg-red-600 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-600 transition-colors">
+    <div class="bg-white p-8 rounded-2xl shadow-xl w-full max-w-lg text-center border border-gray-200">
+        <div class="text-green-500 mb-6">
+            <!-- SVG Checkmark Icon -->
+            <svg class="w-24 h-24 mx-auto" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+            </svg>
+        </div>
+        <h1 class="text-3xl font-bold text-gray-800 mb-4">ご予約が完了しました！</h1>
+        <p class="text-gray-600 mb-8">
+            ご予約ありがとうございます。<br>
+            ご登録いただいたメールアドレスに確認メールを送信しましたので、ご確認ください。
+        </p>
+        <p class="text-sm text-gray-500 mb-8">
+            ※本ページはブラウザバックができません。<br>
+            恐れ入りますが、以下のボタンから元のページへお戻りください。
+        </p>
+        <a href="https://bftomiyasu.fanpla.jp/feature/BattleMarket_2025" class="inline-block w-full sm:w-auto py-3 px-8 rounded-lg shadow-lg text-lg font-bold text-white bg-gray-800 hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-600 transition-colors">
             特設サイトに戻る
         </a>
     </div>
+
+    <script>
+        // ブラウザバックを無効化するロジック
+        window.history.pushState(null, null, location.href);
+        window.addEventListener('popstate', (e) => {
+            window.history.pushState(null, null, location.href);
+        });
+    </script>
 </body>
 </html>
