--- a/thanks.html
+++ b/thanks.html
@@ -26,11 +26,10 @@
         <h1 class="text-3xl font-bold text-gray-800 mb-4">ご予約が完了しました！</h1>
         <p class="text-gray-600 mb-8">
             ご予約ありがとうございます。<br>
-            ご登録いただいたメールアドレスに確認メールを送信しましたので、ご確認ください。
+            お会いできる日を楽しみにしています！
         </p>
         <p class="text-sm text-gray-500 mb-8">
-            ※本ページはブラウザバックができません。<br>
-            恐れ入りますが、以下のボタンから元のページへお戻りください。
+            ※恐れ入りますが、以下のボタンから元のページへお戻りください。
         </p>
         <a href="https://bftomiyasu.fanpla.jp/feature/BattleMarket_2025" class="inline-block w-full sm:w-auto py-3 px-8 rounded-lg shadow-lg text-lg font-bold text-white bg-gray-800 hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-600 transition-colors">
             特設サイトに戻る
@@ -50,3 +49,4 @@
     </script>
 </body>
 </html>
+
