--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
 
         <p class="text-center text-gray-600 mt-6 mb-8 border-t border-b border-gray-300 py-4">
-            予約&nbsp;¥3,500（U-22&nbsp;¥3,000）&nbsp;/&nbsp;当日&nbsp;¥4,000&nbsp;<br class="sm:hidden">すべて飲み放題＋フード付き
+            予約&nbsp;¥3,500（U-22&nbsp;¥3,000）&nbsp;/&nbsp;<br class="sm:hidden">当日&nbsp;¥4,000&nbsp;<br class="sm:hidden">すべて飲み放題＋フード付き
         </p>
 
         <!-- エラーメッセージ表示用の領域 -->
@@ -152,3 +152,4 @@
     </script>
 </body>
 </html>
+
