--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             <div>
                 <label for="full-name" class="block text-sm font-medium text-gray-700 mb-2">代表者氏名（フルネーム）</label>
-                <input type="text" id="full-name" name="entry.1402801926" placeholder="デス・富安・フォー・キューティー" class="mt-1 block w-full px-4 py-3 bg-white border border-gray-300 rounded-lg text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-red-600 focus:border-red-600 transition-colors" required>
+                <input type="text" id="full-name" name="entry.1402801926" placeholder="デス・富安・フォー・キューティ" class="mt-1 block w-full px-4 py-3 bg-white border border-gray-300 rounded-lg text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-red-600 focus:border-red-600 transition-colors" required>
             </div>
             <div>
                 <label for="email" class="block text-sm font-medium text-gray-700 mb-2">メールアドレス</label>
@@ -152,5 +152,6 @@
     </script>
 </body>
 </html>
+
 
 
