--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
 
         <p class="text-center text-gray-600 mt-6 mb-8 border-t border-b border-gray-300 py-4">
-            予約&nbsp;¥3,500（U-22&nbsp;¥3,000）&nbsp;/&nbsp;<br class="sm:hidden">当日&nbsp;¥4,000&nbsp;<br>すべて飲み放題＋フード付き
+            予約&nbsp;¥3,500（U-22&nbsp;¥3,000）&nbsp;/&nbsp;当日&nbsp;¥4,000&nbsp;<br class="sm:hidden">すべて飲み放題＋フード付き
         </p>
 
         <!-- エラーメッセージ表示用の領域 -->
@@ -33,6 +33,10 @@
         <form id="reservationForm" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSc2kTAzHbwnFxHgytbJ7x4ZjlhK5KRpvoStBH44K7zGgxQwnw/formResponse" method="POST" target="dummyframe" class="space-y-6">
             <div>
                 <label for="general-ticket" class="block text-sm font-medium text-gray-700 mb-2">一般チケットの枚数を選択してください</label>
+                <p class="text-xs text-gray-500 mb-2">23歳以上の予約人数を入力してください。</p>
+                <p class="text-xs text-gray-500 mb-2">※U-22チケットのみでの予約の場合、0枚を選択してください。</p>
+                <p class="text-xs text-gray-500 mb-2">例１：23歳以上2人、22歳以下1人での参加 → 一般 2枚、 U-22 1枚</p>
+                <p class="text-xs text-gray-500 mb-2">例２：18歳1人での参加 → 一般 0枚、 U-22 1枚</p>
                 <select id="general-ticket" name="entry.927962343" class="mt-1 block w-full px-4 py-3 bg-white border border-gray-300 rounded-lg text-gray-900 focus:outline-none focus:ring-2 focus:ring-red-600 focus:border-red-600 transition-colors">
                     <option value="0">0</option>
                     <option value="1">1</option>
@@ -44,7 +48,10 @@
             </div>
             <div>
                 <label for="u22-ticket" class="block text-sm font-medium text-gray-700 mb-2">U-22チケットの枚数を選択してください</label>
-                <p class="text-xs text-gray-500 mb-2">※2025/11/16時点で22歳以下の方が対象です。</p>
+                <p class="text-xs text-gray-500 mb-2">22歳以下の予約人数を入力してください。</p>
+                <p class="text-xs text-gray-500 mb-2">※一般チケットのみでの予約の場合、0枚を選択してください。</p>
+                <p class="text-xs text-gray-500 mb-2">例１．23歳2人、22歳1人での参加 → 一般 2枚、 U-22 1枚</p>
+                <p class="text-xs text-gray-500 mb-2">例２：18歳1人での参加 → 一般 0枚、 U-22 1枚</p>
                 <select id="u22-ticket" name="entry.1297745417" class="mt-1 block w-full px-4 py-3 bg-white border border-gray-300 rounded-lg text-gray-900 focus:outline-none focus:ring-2 focus:ring-red-600 focus:border-red-600 transition-colors">
                     <option value="0">0</option>
                     <option value="1">1</option>
@@ -56,7 +63,7 @@
             </div>
             <div>
                 <label for="full-name" class="block text-sm font-medium text-gray-700 mb-2">代表者氏名（フルネーム）</label>
-                <input type="text" id="full-name" name="entry.1402801926" placeholder="デス・富安・フォー・キューティ" class="mt-1 block w-full px-4 py-3 bg-white border border-gray-300 rounded-lg text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-red-600 focus:border-red-600 transition-colors" required>
+                <input type="text" id="full-name" name="entry.1402801926" placeholder="デス・富安・フォー・キューティー" class="mt-1 block w-full px-4 py-3 bg-white border border-gray-300 rounded-lg text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-red-600 focus:border-red-600 transition-colors" required>
             </div>
             <div>
                 <label for="email" class="block text-sm font-medium text-gray-700 mb-2">メールアドレス</label>
@@ -152,6 +159,3 @@
     </script>
 </body>
 </html>
-
-
-
