--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <p class="text-xs text-gray-500 mb-2">23歳以上の予約人数を入力してください。</p>
                 <p class="text-xs text-gray-500 mb-2">※U-22チケットのみでの予約の場合、0枚を選択してください。</p>
                 </br>
-                <p class="text-xs text-gray-500 mb-2">例１：23歳以上2人、22歳以下1人での参加 → 一般 2枚、 U-22 1枚</p>
-                <p class="text-xs text-gray-500 mb-2">例２：18歳1人での参加 → 一般 0枚、 U-22 1枚</p>
+                <p class="text-xs text-gray-500 mb-2">例１：23歳以上2人、22歳以下1人での参加<br class="hidden sm:inline"> → 一般 2枚、 U-22 1枚</p>
+                <p class="text-xs text-gray-500 mb-2">例２：18歳1人での参加<br class="hidden sm:inline"> → 一般 0枚、 U-22 1枚</p>
                 <select id="general-ticket" name="entry.927962343" class="mt-1 block w-full px-4 py-3 bg-white border border-gray-300 rounded-lg text-gray-900 focus:outline-none focus:ring-2 focus:ring-red-600 focus:border-red-600 transition-colors">
                     <option value="0">0</option>
                     <option value="1">1</option>
@@ -52,8 +52,8 @@
                 <p class="text-xs text-gray-500 mb-2">22歳以下の予約人数を入力してください。</p>
                 <p class="text-xs text-gray-500 mb-2">※一般チケットのみでの予約の場合、0枚を選択してください。</p>
                 </br>
-                <p class="text-xs text-gray-500 mb-2">例１．23歳2人、22歳1人での参加 → 一般 2枚、 U-22 1枚</p>
-                <p class="text-xs text-gray-500 mb-2">例２：18歳1人での参加 → 一般 0枚、 U-22 1枚</p>
+                <p class="text-xs text-gray-500 mb-2">例１．23歳2人、22歳1人での参加<br class="hidden sm:inline"> → 一般 2枚、 U-22 1枚</p>
+                <p class="text-xs text-gray-500 mb-2">例２：18歳1人での参加<br class="hidden sm:inline"> → 一般 0枚、 U-22 1枚</p>
                 <select id="u22-ticket" name="entry.1297745417" class="mt-1 block w-full px-4 py-3 bg-white border border-gray-300 rounded-lg text-gray-900 focus:outline-none focus:ring-2 focus:ring-red-600 focus:border-red-600 transition-colors">
                     <option value="0">0</option>
                     <option value="1">1</option>
